k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: worker
    spec:
      containers:
      - args: ["celery", "-A", "usb.tasks", "worker"]
        image: usb
        name: worker
        resources: {}
        volumeMounts:
          - mountPath: /videos
            name: videos
            readOnly: true
          - mountPath: /thumbnails
            name: thumbnails
            readOnly: false
      restartPolicy: Always
      volumes:
        - name: thumbnails
          persistentVolumeClaim:
            claimName: thumbnails
        - name: videos
          persistentVolumeClaim:
            claimName: usb-videos
