k8s/base/appsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: appsearch
  name: appsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appsearch
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: appsearch
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms2g -Xmx2g
        - name: allow_es_settings_modification
          value: "true"
        - name: elasticsearch.host
          value: http://$(SERVICE_NAME_ELASTICSEARCH):9200
        - name: app_search.external_url
          value: http://localhost
        image: docker.elastic.co/app-search/app-search:7.6.0
        name: appsearch
        ports:
          - name: appsearch
            containerPort: 3002
        startupProbe:
          tcpSocket:
            port: appsearch
          failureThreshold: 60
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: appsearch
          failureThreshold: 5
          periodSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: appsearch
  name: appsearch
spec:
  ports:
  - name: appsearch
    port: 3002
    targetPort: 3002
  selector:
    io.kompose.service: appsearch
