k8s/base/flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: celeryflower
  name: celeryflower
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celeryflower
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      labels:
        io.kompose.service: celeryflower
    spec:
      containers:
      - args: ["celery", "-A", "usb.tasks", "flower", "--port=5555"]
        image: usb
        name: celeryflower
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: celeryflower
  name: celeryflower
spec:
  ports:
  - name: celeryflower
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: celeryflower
