k8s/base/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: result
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      labels:
        io.kompose.service: result
    spec:
      containers:
        - image: redis:5.0
          name: result
          args: ["redis-server", "--appendonly", "no"]
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: result
  name: result
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    io.kompose.service: result
