k8s/base/usb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: usb
  name: usb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: usb
  template:
    metadata:
      labels:
        io.kompose.service: usb
    spec:
      containers:
        - name: worker
          args: ["usb", "tasks.worker"]
          image: usb
          volumeMounts:
            - mountPath: /videos
              name: videos
              readOnly: true
            - mountPath: /thumbnails
              name: thumbnails
              readOnly: false
        - name: bot
          image: usb
          args: ["usb", "discord.run"]
          volumeMounts:
            - mountPath: /thumbnails
              name: thumbnails
              readOnly: true
        - name: web
          args: ["usb", "server.run"]
          image: usb
          volumeMounts:
          - mountPath: /videos
            name: videos
            readOnly: true
          - mountPath: /thumbnails
            name: thumbnails
            readOnly: true
        - name: celeryflower
          args: ["usb", "tasks.flower"]
          image: usb
      volumes:
        - name: thumbnails
          persistentVolumeClaim:
            claimName: thumbnails
        - name: videos
          persistentVolumeClaim:
            claimName: usb-videos
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: web
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: usb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: celeryflower
  name: celeryflower
spec:
  ports:
  - name: celeryflower
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: usb
