k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: web
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      labels:
        io.kompose.service: web
    spec:
      containers:
      - args: ["python", "-m", "usb.server"]
        image: usb
        name: web
        volumeMounts:
        - mountPath: /videos
          name: videos
          readOnly: true
        - mountPath: /thumbnails
          name: thumbnails
          readOnly: true
      volumes:
        - name: thumbnails
          persistentVolumeClaim:
            claimName: thumbnails
            readOnly: true
        - name: videos
          persistentVolumeClaim:
            claimName: usb-videos
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: web
