k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: appsearch.seinfeld.app
    http: &rules_appsearch
      paths:
        - path: /
          backend:
            serviceName: appsearch
            servicePort: 3002
  - host: seinfeld.app
    http: &rules_web
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 5000
  - host: flower.seinfeld.app
    http: &rules_flower
      paths:
        - path: /
          backend:
            serviceName: celeryflower
            servicePort: 5555
  - host: appsearch-127-0-0-1.nip.io
    http: *rules_appsearch
  - host: web-127-0-0-1.nip.io
    http: *rules_web
  - host: flower-127-0-0-1.nip.io
    http: *rules_flower
